<resources>
    <string name="app_name">Administrador de tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar Seción</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password"><u>Olvide mi contraseña</u></string>
    <string name="remember_user">Recordar mi usuario en este dispositivo</string>
    <string name="start">Iniciar secion</string>
    <string name="not_have_account">No tengo una cuenta</string>
    <string name="create_account">Crear cuenta</string>
    <string name="full_name">Nombre Completo</string>
    <string name="signup">Registrarme</string>
    <string name="already_have_account">Ya tengo una cuenta</string>
    <string name="name_tarea_cardview">Tarea 1</string>
    <string name="fecha_finaliza_tarea">27/11/2017</string>
    <string name="finaliza_tarea_item">Finaliza el:</string>
    <string name="recover_password"><u>Recuperar</u></string>
    <string name="is_required">Es requerido</string>


    <string name="mensaje_succes_recovery_email">Email enviado correctamente</string>
    <string name="recover_password_accept"><u>Aceptar</u></string>
    <string name="add_a_photo">Agregar una foto</string>
    <string name="btn_save_todo">Guardar</string>



</resources>
