<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview_todo_item"
    android:id="@+id/cardview_todo_item"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bacgroud_cardview_todo_item">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_tarea_cardview"
                android:layout_marginLeft="8dp"
                android:textColor="#ec0505"
                android:textStyle="bold"
                cardview:layout_constraintLeft_toLeftOf="parent"
                cardview:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cardview:srcCompat="@mipmap/ic_launcher"
                cardview:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                cardview:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_finaliza_tarea"
                android:layout_marginRight="8dp"
                cardview:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                cardview:layout_constraintTop_toBottomOf="@+id/imageView3"
                cardview:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finaliza_tarea_item"
                cardview:layout_constraintRight_toLeftOf="@+id/textView5"
                android:layout_marginRight="7dp"
                android:textStyle="bold"
                cardview:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                cardview:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>